<resources>
    <string name="app_name">Meals</string>
    <string name="bienvenida">Welcome</string>
    <string name="btnMain">Accept</string>
    <string name="tvCre1">%s, you are using the version 1 of Meals</string>
    <string name="tvMen1">%s, welcome</string>
    <string name="btnSalir">Exit</string>
    <string name="Comments">Comments</string>
    <string name="Source">Source</string>
    <string name="Measures">Measures</string>
    <string name="Ingredients">Ingredients</string>
    <string name="YouTube">YouTube</string>
    <string name="Tags">Tags</string>
    <string name="Instructions">Instructions</string>
    <string name="Area">Area:</string>
    <string name="Category">Category:</string>
    <string name="Name">Name:</string>
    <string name="UserName">User Name</string>
    <string name="tvCre2">This app shows a list of menus, how to prepare them, and the ingredients needed for it.</string>
    <string name="btnCre">Contact</string>
    <string name="btStart">Start</string>
    <string name="info">Information</string>
    <string name="discover">Discover</string>
    <string name="favorite">Favorites</string>
    <string name="personal">Personal</string>
    <string name="etMainToast">The default user name is \'User\'</string>
    <string name="favToast">There are no items added to favorites</string>
    <string name="usuario">User</string>
</resources>