<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/credit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditFragment">

    <TextView
        android:id="@+id/tvCre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCre1"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCre2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCre2"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:text="@string/tvCre2"
        android:textSize="17sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnCre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCre1" />

    <Button
        android:id="@+id/btnCre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btnCre"
        android:theme="@style/MyButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/btnCre2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCre2" />

    <Button
        android:id="@+id/btnCre2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnCre2"
        android:theme="@style/MyButtonStyle"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>