<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailItemFragment"
    android:theme="@style/Base.Theme.MyApplication">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    tools:context=".DetailItemFragment"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    tools:context=".DetailItemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/bordes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".DetailItemFragment">

        <ImageView
            android:id="@+id/ivMealThumb"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMealName1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Name"
            android:theme="@style/cabecera"
            app:layout_constraintBottom_toBottomOf="@+id/tvMealName"
            app:layout_constraintStart_toEndOf="@id/ivMealThumb"
            app:layout_constraintTop_toTopOf="@id/tvMealName" />

        <TextView
            android:id="@+id/tvMealName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toTopOf="@+id/tvCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvCategory"
            app:layout_constraintTop_toTopOf="@+id/ivMealThumb"
            tools:text="Meal Name" />

        <TextView
            android:id="@+id/tvCategory1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Category"
            android:theme="@style/cabecera"
            app:layout_constraintBottom_toBottomOf="@+id/tvCategory"
            app:layout_constraintStart_toEndOf="@id/ivMealThumb"
            app:layout_constraintTop_toTopOf="@+id/tvCategory" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toTopOf="@+id/tvArea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvCategory1"
            app:layout_constraintTop_toBottomOf="@+id/tvMealName"
            tools:text="Category" />

        <TextView
            android:id="@+id/tvArea1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Area"
            android:theme="@style/cabecera"
            app:layout_constraintBottom_toBottomOf="@id/tvArea"
            app:layout_constraintStart_toEndOf="@id/ivMealThumb"
            app:layout_constraintTop_toTopOf="@+id/tvArea" />

        <TextView
            android:id="@+id/tvArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@id/ivMealThumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvCategory"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory"
            tools:text="Area" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvInstructions1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Instructions"
        android:theme="@style/cabecera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInstructions1"
        tools:text="Instructions" />

    <TextView
        android:id="@+id/tvTags1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Tags"
        android:theme="@style/cabecera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInstructions" />

    <TextView
        android:id="@+id/tvTags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTags1"
        tools:text="Tags" />

    <TextView
        android:id="@+id/tvYoutube1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/YouTube"
        android:theme="@style/cabecera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTags" />

    <TextView
        android:id="@+id/tvYoutube"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvYoutube1"
        tools:text="Watch on YouTube" />

    <TextView
        android:id="@+id/tvIngredients1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Ingredients"
        android:theme="@style/cabecera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvYoutube" />

    <TextView
        android:id="@+id/tvIngredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIngredients1"
        tools:text="Ingredients" />

    <TextView
        android:id="@+id/tvMeasures1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Measures"
        android:theme="@style/cabecera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIngredients" />

    <TextView
        android:id="@+id/tvMeasures"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMeasures1"
        tools:text="Measures" />

    <TextView
        android:id="@+id/tvSource1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Source"
        android:theme="@style/cabecera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMeasures" />

    <TextView
        android:id="@+id/tvSource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSource1"
        tools:text="Source" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>